became an influencer section half done button left

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -40,13 +40,13 @@
                         <img src="./assets/images/download.jfif" class="rounded-[30px]" alt="intro_image">
                     </div>
                     <div class="grid justify-center text-center items-center  font-bold text-[#d2dc1d] py-[30px] ">
-                        <span class="text-[38.4px] leading-[42px] ">
+                        <span class="text-[38.4px] leading-[45px] tiktok">
                             TikTok Social Media Influencer
                         </span>
                     </div>
                     <div
                         class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px]">
-                        <span>
+                        <span class="tiktoklorem">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel
                             nulla gravida pulvinar. Pellentesque habitant morbi tristique senectus et netus et
                             malesuada fames ac turpis egestas.
@@ -59,7 +59,7 @@
                     </div>
                     <div class="flex justify-center items-center py-[16px] pb-[128px]">
                         <button
-                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
+                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold getstartedfirst">
                             Get Started
                         </button>
                     </div>
@@ -73,7 +73,7 @@
         <div class="grid ">
             <div class="bg-[#f3f3f1] grid justify-center items-center py-[96px]">
                 <div class="grid  items-center ">
-                    <div class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold">
+                    <div class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold px-[24px] becameinfluencer">
                         <span>Become an influencer</span>
                     </div>
                     <div class="flex justify-center items-center py-[40px] ">
