--- a/influencer/index.html
+++ b/influencer/index.html
@@ -78,20 +78,20 @@
                     </div>
                     <div class="flex justify-center items-center py-[40px] ">
                         <button
-                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
-                            Get Started
+                            class="rounded-[100px] py-[1.25rem] px-[2rem] flex text-center place-items-center   h-[67px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold influencergetstarted">
+                            Get Started 
                         </button>
                     </div>
 
 
                     <div class="grid px-[12px] space-y-[32px]">
                         <!-- 1st photo -->
-                        <div class="flex  items-center bg-white rounded-[30px] p-[16px]">
-                            <div class="grid justify-center items-center bg-cover">
-                                <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
+                            <div class="grid justify-center items-center place-items-center ">
+                                <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
-                                    <p class="pt-[18px]">
+                                    <p class="pt-[18px] featuretext">
                                         Lorem ipsum dolor sit amet, consectetur
                                         adipiscing elit habitant turpis .
                                     </p>
@@ -99,12 +99,12 @@
                             </div>
                         </div>
                         <!-- 2nd photo -->
-                        <div class="flex  items-center bg-white rounded-[30px] p-[16px]">
-                            <div class="grid justify-center items-center bg-cover">
-                                <img src="./assets/images/features2.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
+                            <div class="grid justify-center items-center place-items-center ">
+                                <img src="./assets/images/features2.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
-                                    <p class="pt-[18px]">
+                                    <p class="pt-[18px] featuretext">
                                         Lorem ipsum dolor sit amet, consectetur
                                         adipiscing elit habitant turpis .
                                     </p>
@@ -112,12 +112,12 @@
                             </div>
                         </div>
                         <!-- 3rd -->
-                        <div class="flex  items-center bg-white rounded-[30px] p-[16px]">
-                            <div class="grid justify-center items-center bg-cover">
-                                <img src="./assets/images/features4.jpg" alt="" class="rounded-[30px] h-[300px]">
+                        <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
+                            <div class="grid justify-center items-center place-items-center ">
+                                <img src="./assets/images/features4.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
-                                    <p class="pt-[18px]">
+                                    <p class="pt-[18px] featuretext">
                                         Lorem ipsum dolor sit amet, consectetur
                                         adipiscing elit habitant turpis .
                                     </p>
@@ -136,21 +136,21 @@
                     <img src="./assets/images/features4.jpg" alt="features4" class="rounded-[32px]">
                 </div>
                 <div class="grid justify-center text-center items-center  font-bold text-[#e9c0e9] py-[30px] ">
-                    <span class="text-[32.8px] leading-[42px] ">
+                    <span class="text-[32.8px] leading-[42px] uniquecontenttext">
                         Learn how to create unique content
                     </span>
                 </div>
                 <div
                     class="grid justify-center items-center text-center text-[#e9c0e9] text-[18.24px] leading-[26px] pt-[14px] pb-[32px] px-[4px]">
-                    <span>
+                    <span class="uniquecontentp">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel
                         nulla gravida pulvinar. Pellentesque habitant morbi tristique senectus et netus et
                         malesuada fames ac turpis egestas.
                     </span>
                 </div>
-                <div class="flex justify-center items-center  ">
+                <div class="flex justify-center items-center  uniquecontentbtn">
                     <button
-                        class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold">
+                        class="rounded-[100px]  h-[67px] py-[20px] px-[32px] flex place-items-center font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-[600] ">
                         Get Started
                     </button>
                 </div>
