still working in responsiveness

--- a/influencer/index.html
+++ b/influencer/index.html
@@ -161,7 +161,7 @@
         <div class="grid bg-[#f3f3f1]">
             <div class="grid items-center px-[12px] pt-[5rem]">
                 <div class="flex justify-center items-center">
-                    <p class="text-[32.8px] font-bold">Creator meeting</p>
+                    <p class="text-[32.8px] font-bold  creatermeeting ">Creator meeting</p>
                 </div>
                 <div>
                     <div class="flex justify-center items-center pt-[48px] overflow-hidden  ">
@@ -169,10 +169,10 @@
                     </div>
                     <div class="grid justify-center items-center space-y-[12px] py-[32px]">
                         <div class="flex justify-center items-center text-[#353535] text-[18.24px]">
-                            <span>Creators</span>
+                            <span class="creater">Creators</span>
                         </div>
                         <div
-                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center">
+                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center createrlorem">
                             <span>Lorem ipsum dolor sit amet,
                                 consectetur adipiscing elit. Donec egestas massa vel nulla gravida pulvinar.</span>
                         </div>
@@ -187,10 +187,10 @@
                     </div>
                     <div class="grid justify-center items-center space-y-[12px] py-[32px]">
                         <div class="flex justify-center items-center text-[#353535] text-[18.24px]">
-                            <span>Promotion</span>
+                            <span class="creater">Promotion</span>
                         </div>
                         <div
-                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center">
+                            class="flex justify-center text-center text-[21.6px] leading-[25px] font-bold items-center createrlorem">
                             <span>Lorem ipsum dolor sit amet,
                                 adipiscing elit. </span>
                         </div>
@@ -206,10 +206,10 @@
 
 
         <!-- multycolor page starts -->
-        <div class="grid bg-[#f3f3f1] py-[80px]">
-            <div class="grid justify-center items-center px-[12px] space-y-8">
-                <div class="flex  items-center bg-[#e9c0e9] rounded-[30px] p-[16px]">
-                    <div class="grid justify-center items-center bg-cover">
+        <div class="grid bg-[#f3f3f1]  py-[80px]">
+            <div class="grid  items-center px-[12px] space-y-8">
+                <div class="flex w-full  place-items-center bg-[#e9c0e9] object-cover  rounded-[30px] p-[16px]">
+                    <div class="grid place-items-center bg-cover">
                         <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px]">
                         <div
                             class="flex justify-center items-center pt-[14px] text-start px-[16px] text-[22px] text-[#502274] font-semibold">
