--- a/influencer/index.html
+++ b/influencer/index.html
@@ -19,10 +19,10 @@
 <body>
     <!-- start -->
     <div class="grid">
-        <div class="grid  items-center fixed w-full pt-[24px] px-[8px] ">
+        <div class="grid  items-center fixed w-full pt-[24px] px-[8px] sm:px-[24px]">
             <div class="flex py-[12px]  bg-white rounded-full justify-between items-center w-full px-[24px] ">
                 <div class="text-[22px] font-[700] pl-[8px]">
-                    <a href="">InfluencerM5</a>
+                    <a href="" class="navstyle">InfluencerM5</a>
                 </div>
                 <div class="grid items-center justify-center space-y-[6px]">
                     <div class="h-[2px] w-[30px] bg-black"></div>
@@ -34,34 +34,38 @@
 
         <!-- intro starts -->
         <div class="grid">
-            <div class="bg-[#254f1a] grid px-[12px]">
+            <div class="bg-[#254f1a] grid px-[12px] sm:px-[36px]">
                 <div class="grid justify-center items-center pt-[128px]">
                     <div class="flex justify-center items-center rounded-3xl">
                         <img src="./assets/images/download.jfif" class="rounded-[30px]" alt="intro_image">
                     </div>
-                    <div class="grid justify-center text-center items-center  font-bold text-[#d2dc1d] py-[30px] ">
+                    <div
+                        class="grid justify-center text-center items-center  font-bold text-[#d2dc1d] py-[30px] sm:text-start">
                         <span class="text-[38.4px] leading-[45px] tiktok">
                             TikTok Social Media Influencer
                         </span>
                     </div>
                     <div
-                        class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px]">
+                        class="grid justify-center items-center text-center text-[#d2dc1d] text-[18.4px] leading-[24px] pt-[14px] pb-[32px] sm:text-start">
                         <span class="tiktoklorem">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas massa vel
                             nulla gravida pulvinar. Pellentesque habitant morbi tristique senectus et netus et
                             malesuada fames ac turpis egestas.
                         </span>
                     </div>
-                    <div class="flex  items-center ">
-                        <input type="email"
-                            class="h-[70.8px] w-full rounded-[8px] placeholder:pl-[26px] placeholder:text-[20px]"
-                            placeholder="test@gmail.com">
-                    </div>
-                    <div class="flex justify-center items-center py-[16px] pb-[128px]">
-                        <button
-                            class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold getstartedfirst">
-                            Get Started
-                        </button>
+                    <div class="sm:flex sm:pb-[128px] sm:space-x-[9.6px]">
+                        <div class="flex  items-center ">
+                            <input type="email"
+                                class="h-[70.8px] w-full rounded-[8px] placeholder:pl-[26px] placeholder:text-[20px] sm:w-[338.41px] sm:px-[9.6px]"
+                                placeholder="test@gmail.com">
+                        </div>
+                        <div
+                            class="flex justify-center items-center py-[16px] pb-[128px] sm:pb-0 sm:py-0 sm:px-[9.6px]">
+                            <button
+                                class="rounded-[100px]  h-[67px] w-[160px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold getstartedfirst">
+                                Get Started
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -73,27 +77,29 @@
         <div class="grid ">
             <div class="bg-[#f3f3f1] grid justify-center items-center py-[96px]">
                 <div class="grid  items-center ">
-                    <div class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold px-[24px] becameinfluencer">
+                    <div
+                        class="text-[32.8px] leading-[40px] flex justify-center text-center font-bold px-[24px] becameinfluencer">
                         <span>Become an influencer</span>
                     </div>
                     <div class="flex justify-center items-center py-[40px] ">
                         <button
                             class="rounded-[100px] py-[1.25rem] px-[2rem] flex text-center place-items-center   h-[67px] font-[17.12px] bg-[#e9c0e9] text-[#7e2c7e] font-semibold influencergetstarted">
-                            Get Started 
+                            Get Started
                         </button>
                     </div>
 
 
-                    <div class="grid px-[12px] space-y-[32px]">
+                    <div class="grid px-[12px] space-y-[32px] sm:grid-cols-2 sm:space-y-0 sm:gap-[24px]">
                         <!-- 1st photo -->
-                        <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
+                        <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px] sm:p-[32px]">
                             <div class="grid justify-center items-center place-items-center ">
-                                <img src="./assets/images/features1.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
+                                <img src="./assets/images/features1.jpg" alt=""
+                                    class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
                                     <p class="pt-[18px] featuretext">
                                         Lorem ipsum dolor sit amet, consectetur
-                                        adipiscing elit habitant turpis .
+                                        adipiscing elit habitant turpis.
                                     </p>
                                 </div>
                             </div>
@@ -101,7 +107,8 @@
                         <!-- 2nd photo -->
                         <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
                             <div class="grid justify-center items-center place-items-center ">
-                                <img src="./assets/images/features2.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
+                                <img src="./assets/images/features2.jpg" alt=""
+                                    class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
                                     <p class="pt-[18px] featuretext">
@@ -114,7 +121,8 @@
                         <!-- 3rd -->
                         <div class="flex justify-center  items-center bg-white rounded-[30px] p-[16px]">
                             <div class="grid justify-center items-center place-items-center ">
-                                <img src="./assets/images/features4.jpg" alt="" class="rounded-[30px] h-[300px] w-full object-cover">
+                                <img src="./assets/images/features4.jpg" alt=""
+                                    class="rounded-[30px] h-[300px] w-full object-cover">
                                 <div
                                     class="flex justify-center items-center py-[26px] text-center px-[16px] text-[17.50px] ">
                                     <p class="pt-[18px] featuretext">
